changed some mechanic and interaction things